--- a/client.html
+++ b/client.html
@@ -1,42 +1,93 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>SSE Example</title>
 </head>
+
 <body>
   <h1>Server-Sent Events Example</h1>
 
+  <button id="btn-export">Export</button>
+
   <script>
-    // Check if the browser supports Server-Sent Events
-    if (typeof(EventSource) !== 'undefined') {
-      // Create a new EventSource object to connect to the SSE endpoint
-      const eventSource = new EventSource('http://localhost:3001/sse-endpoint');
+    const apiButton = document.getElementById('btn-export');
+    apiButton.addEventListener('click', async () => {
+      // Check if the browser supports Server-Sent Events
+      if (typeof (EventSource) !== 'undefined') {
+        // Create a new EventSource object to connect to the SSE endpoint
+        const eventSource = new EventSource('http://localhost:3001/sse-endpoint');
 
-      // Listen for messages from the server
-      eventSource.onmessage = function(event) {
-        const data = JSON.parse(event.data);
-        console.log('Received event:', data);
+        // Listen for messages from the server
+        eventSource.onmessage = function (event) {
+          const data = JSON.parse(event.data);
+          console.log('Received event:', data);
 
-        // Check the event type and display a modal if it's a referral registration
-        if (data.type === 'referral_registration') {
-          showModal(data.message);
+          // Check the event type and display a modal if it's a referral registration
+          if (data.type === 'referral_registration') {
+            showModal(data.message);
+          }
+
+          if (data.type === 'export_complete') {
+            triggerDownload(data.downloadUrl)
+            eventSource.close()
+          }
+        };
+
+        // Handle errors
+        eventSource.onerror = function (err) {
+          console.error('EventSource failed:', err);
+          // Optionally, implement reconnection logic here
+        };
+      } else {
+        console.log('Your browser does not support Server-Sent Events.');
+      }
+
+      // Call the API to trigger the export
+      fetch('http://localhost:3001/send-message', {
+        method: 'POST'
+      }).then(response => {
+        if (response.ok) {
+          console.log('Export request sent');
+        } else {
+          console.error('Export request failed:', response.statusText);
         }
-      };
+      })
+    })
 
-      // Handle errors
-      eventSource.onerror = function(err) {
-        console.error('EventSource failed:', err);
-        // Optionally, implement reconnection logic here
-      };
-    } else {
-      console.log('Your browser does not support Server-Sent Events.');
-    }
 
     // Function to display a modal (implement according to your UI framework)
     function showModal(message) {
       alert('Notification: ' + message);
       // Replace alert with your modal display logic
     }
+
+    function triggerDownload(url) {
+      fetch(url)
+        .then(response => response.blob())
+        .then(blob => {
+          // Create object URL from blob
+          const url = window.URL.createObjectURL(blob);
+
+          // Create download link
+          const a = document.createElement('a');
+          a.href = url;
+          a.download = 'test.jpg';
+          a.style.display = 'none';
+
+          // Trigger download
+          document.body.appendChild(a);
+          a.click();
+
+          // Cleanup
+          window.URL.revokeObjectURL(url);
+          document.body.removeChild(a);
+        })
+        .catch(error => {
+          console.error('Download failed:', error);
+        });
+    }
   </script>
 </body>
+
 </html>
